src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <description>Edit Contact</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e&quot;, &quot;Edit&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Edit Contact</inlineHelpText>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Based on the Contact&apos;s actions with us.  The higher the score, the more active the Contact has been.</description>
        <inlineHelpText>Based on the Contact&apos;s actions with us.  The higher the score, the more active the Contact has been.</inlineHelpText>
        <label>Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Contact is an Internal User Contact</description>
        <inlineHelpText>True if the Contact is an Internal User Contact</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call__c</fullName>
        <inlineHelpText>Last call by a real person</inlineHelpText>
        <label>Last Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Contacted__c</fullName>
        <label>Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Emailed__c</fullName>
        <inlineHelpText>Last Emailed by a real person</inlineHelpText>
        <label>Last Emailed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Human_Activity__c</fullName>
        <inlineHelpText>Last activity by a real person</inlineHelpText>
        <label>Last Human Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>IF(Internal__c = True, HYPERLINK(&apos;/ Matching_User__r.Manager.Internal_Contact__c&apos;, Matching_User__r.Manager.FirstName&amp;&quot; &quot;&amp;Matching_User__r.Manager.LastName),&quot;Not an Internal Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The manager of the internal user</inlineHelpText>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User this contact was created for</description>
        <inlineHelpText>The User this contact was created for</inlineHelpText>
        <label>Matching User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The campaign the contact was most recently associated with</description>
        <inlineHelpText>The campaign the contact was most recently associated with</inlineHelpText>
        <label>Most Recent Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points_Check_In__c</fullName>
        <label>Points Check In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Today__c</fullName>
        <formula>Total_Points__c - Points_Check_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Dev_User_Id__c</fullName>
        <label>SF Dev User Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trailhead_URL__c</fullName>
        <formula>hyperlink(&quot;https://developer.salesforce.com/forums/ForumsTrailheadProfile?userId=&quot;+ SF_Dev_User_Id__c ,&quot;TrailheadURL&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trailhead URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_URL__c</fullName>
        <formula>hyperlink(&quot;https://twitter.com/&quot;+  Twitter__c  ,&quot;@&quot;+Twitter__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Trailhead_Leaderboard</fullName>
        <columns>FULL_NAME</columns>
        <columns>Total_Points__c</columns>
        <columns>Points_Today__c</columns>
        <columns>Trailhead_URL__c</columns>
        <columns>SF_Dev_User_Id__c</columns>
        <columns>Twitter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Trailhead</value>
        </filters>
        <label>Trailhead Leaderboard</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trailhead</fullName>
        <active>true</active>
        <label>Trailhead</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>